<resources>
    <string name="app_name">ICON Egypt</string>
    <string name="log_in">LOG IN</string>
    <string name="log_out">LOG OUT</string>
    <string name="btn_continue">CONTINUE</string>
    <string name="title_activity_profile">ICON Egypt</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="tap_again_to_exit">Please tap Back again to exit</string>
    <string name="default_notification_channel_id">1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="call">Call</string>
    <string name="change_password">Change Password</string>
    <string name="phone">Phone :</string>
    <string name="name">Name :</string>
    <string name="location">Location :</string>
    <string name="remove">Remove</string>
    <string name="add">ADD</string>
    <string name="title_activity_location_picker">LocationPickerActivity</string>
</resources>
