<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/white"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/header_icon"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/image_header_dimen"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/image_header_top_margin"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_icon_480" />

    <RelativeLayout
        android:id="@+id/login_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_icon"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/login_layout_padding"
            android:paddingTop="@dimen/login_layout_padding_top"
            android:paddingRight="@dimen/login_layout_padding"
            android:weightSum="1">

            <agency.tango.android.avatarview.views.AvatarView
                android:id="@+id/imageView"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:contentDescription="@string/nav_header_desc"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:src="@drawable/profile_placeholder"
                android:visibility="visible"
                bind:av_border_color="@android:color/white"
                bind:av_border_width="6dp"
                bind:av_text_size_percentage="40" />


            <EditText
                android:id="@+id/username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="8dp"
                android:foregroundTint="@color/gray"
                android:hint="Username"
                android:lines="1"
                android:singleLine="true" />

            <TextView
                android:id="@+id/username_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="8dp"
                android:foregroundTint="@color/gray"
                android:gravity="center"
                android:textSize="20sp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="8dp"
                android:foregroundTint="@color/gray"
                android:hint="Password"
                android:inputType="textPassword"
                android:lines="1"
                android:singleLine="true"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/login_button_margin"
                android:layout_marginTop="@dimen/login_button_margin"
                android:layout_marginRight="@dimen/login_button_margin"
                android:text="@string/log_in"
                android:textColor="@color/dark_gray"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/login_button_margin"
                android:layout_marginTop="@dimen/login_button_margin"
                android:layout_marginRight="@dimen/login_button_margin"
                android:text="@string/btn_continue"
                android:textColor="@color/dark_gray"
                android:visibility="visible" />

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/login_button_margin"
                android:layout_marginTop="@dimen/login_button_margin"
                android:layout_marginRight="@dimen/login_button_margin"
                android:text="@string/log_out"
                android:textColor="@color/dark_gray"
                android:visibility="visible" />

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
